<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="T_AlmElement" Id="{3e894be3-c181-4f30-b7e0-837e592d1145}">
    <Declaration><![CDATA[TYPE T_AlmElement :
STRUCT
	///unique alarm number := 100000*udiMachineNr + intCtrlId*100 + udiAlarmNr
	udiNr: UDINT;
	///additional information - better string???
	dinInfo: DINT;
	///corresponding alarm class
	eClass: E_AlmClass;
	///clear, resetable
	intState: E_AlmState;
	///entry time
	strDTEntry: STRING;
	///from machine (standard = 1)
	udiMachineNr: UDINT;
	///from controller
	intCtrlId: INT;
	///local alarm number
	udiAlarmNr: UDINT;
	// for debugging string alarm controller-alarm
	strText: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>