<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="T_Ctrl_Job" Id="{be2c3b25-e079-4e9d-96b1-0ccb5320a23b}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

TYPE T_Ctrl_Job :
STRUCT
	///mode if mode = AUTO -> ACmd will be used, otherwise the MCmd channel is open
	eMode: E_Mode;
	///automatic command from parent ctrl
	intACmd: INT;
	///manual command from UI p.e.
	intMCmd: INT;
	///active cmd
	strCmd: STRING;
	///active state
	intState: INT;
	strState: STRING;
	///if used - show substates for debugging
	strSubState: STRING;
	///event channel to signal special events to parent parallel to status
	intEvt: INT;
	///reset all alarms
	bolAlmReset: BOOL;
	///activate io-forcing
	bolIoForce: BOOL;
	///overwrite suspend all interlocks (for debugging/testing)
	bolIlkOverwrite: BOOL;
	///activ alarm class of parent ctrl
	eParent_ActivAlmClass: E_AlmClass;
	///activ alarm class of me ctrl
	eMe_ActivAlmClass: E_AlmClass;
	///list of all implemented commands
	aCmdList: ARRAY[0..cMaxCmdPerCtrl] OF T_Ctrl_CmdListElement;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>